--- a/myapplication/src/main/res/layout/fragment_classes.xml
+++ b/myapplication/src/main/res/layout/fragment_classes.xml
@@ -10,78 +10,64 @@
         android:id="@+id/class_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="15dp"
         android:backgroundTint="#673AB7"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintStart_toEndOf="@+id/class_5"
-        app:layout_constraintTop_toBottomOf="@+id/class_3" />
+        tools:layout_editor_absoluteX="277dp"
+        tools:layout_editor_absoluteY="255dp" />
 
     <ImageButton
         android:id="@+id/class_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:backgroundTint="#2196F3"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintTop_toBottomOf="@+id/class_2"
-        tools:layout_editor_absoluteX="170dp" />
+        tools:layout_editor_absoluteX="170dp"
+        tools:layout_editor_absoluteY="255dp" />
 
     <ImageButton
         android:id="@+id/class_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="34dp"
         android:backgroundTint="#009688"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/class_5"
-        app:layout_constraintTop_toBottomOf="@+id/class_1" />
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="255dp" />
 
     <ImageButton
         android:id="@+id/class_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
         android:backgroundTint="#8BC34A"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintStart_toEndOf="@+id/class_2"
+        tools:layout_editor_absoluteX="277dp"
         tools:layout_editor_absoluteY="173dp" />
 
     <TextView
         android:id="@+id/text_classes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="356dp" />
 
     <TextView
         android:id="@+id/my_classes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:text="@string/my_classes"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="80dp" />
 
     <ImageButton
         android:id="@+id/class_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="34dp"
         android:backgroundTint="#F44336"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/class_2"
+        tools:layout_editor_absoluteX="64dp"
         tools:layout_editor_absoluteY="173dp" />
 
     <ImageButton
@@ -90,8 +76,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFC107"
         android:src="@drawable/outline_school_black_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteX="170dp"
         tools:layout_editor_absoluteY="173dp" />
 
     <TextView
@@ -99,9 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tip"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteX="95dp"
         tools:layout_editor_absoluteY="401dp" />
 
     <ImageView
