--- a/myapplication/src/main/res/layout/fragment_classes.xml
+++ b/myapplication/src/main/res/layout/fragment_classes.xml
@@ -7,109 +7,130 @@
     tools:context=".ui.classes.ClassesFragment">
 
     <ImageButton
-        android:id="@+id/class_6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#673AB7"
-        android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="277dp"
-        tools:layout_editor_absoluteY="255dp" />
-
-    <ImageButton
         android:id="@+id/class_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="34dp"
         android:backgroundTint="#2196F3"
         android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="255dp" />
+        app:layout_constraintEnd_toStartOf="@+id/class_6"
+        app:layout_constraintTop_toBottomOf="@+id/class_2" />
+
+    <ImageButton
+        android:id="@+id/class_3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="63dp"
+        android:backgroundTint="#8BC34A"
+        android:src="@drawable/outline_school_black_24dp"
+        app:layout_constraintEnd_toEndOf="@+id/class_6"
+        app:layout_constraintStart_toStartOf="@+id/class_6"
+        app:layout_constraintTop_toBottomOf="@+id/my_classes" />
+
+    <ImageButton
+        android:id="@+id/class_2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFC107"
+        android:src="@drawable/outline_school_black_24dp"
+        app:layout_constraintEnd_toEndOf="@+id/class_5"
+        app:layout_constraintStart_toStartOf="@+id/class_5"
+        app:layout_constraintTop_toTopOf="@+id/class_3" />
+
+    <ImageButton
+        android:id="@+id/class_1"
+        android:layout_width="72dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="#F44336"
+        android:src="@drawable/outline_school_black_24dp"
+        app:layout_constraintBottom_toTopOf="@+id/class_4"
+        app:layout_constraintStart_toStartOf="@+id/class_4" />
+
+    <ImageButton
+        android:id="@+id/class_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="88dp"
+        android:backgroundTint="#673AB7"
+        android:src="@drawable/outline_school_black_24dp"
+        app:layout_constraintEnd_toEndOf="@+id/text_classes"
+        app:layout_constraintTop_toBottomOf="@+id/class_3" />
 
     <ImageButton
         android:id="@+id/class_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="35dp"
         android:backgroundTint="#009688"
         android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="255dp" />
-
-    <ImageButton
-        android:id="@+id/class_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#8BC34A"
-        android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="277dp"
-        tools:layout_editor_absoluteY="173dp" />
+        app:layout_constraintEnd_toStartOf="@+id/class_5"
+        app:layout_constraintTop_toTopOf="@+id/class_5" />
 
     <TextView
         android:id="@+id/text_classes"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="356dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/class_4" />
 
     <TextView
         android:id="@+id/my_classes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="83dp"
         android:text="@string/my_classes"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="80dp" />
-
-    <ImageButton
-        android:id="@+id/class_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#F44336"
-        android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="173dp" />
-
-    <ImageButton
-        android:id="@+id/class_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#FFC107"
-        android:src="@drawable/outline_school_black_24dp"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="173dp" />
+        app:layout_constraintStart_toEndOf="@+id/class_1"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
         android:text="@string/tip"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="401dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
         android:src="@drawable/outline_tips_and_updates_black_24dp"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="396dp" />
+        app:layout_constraintEnd_toEndOf="@+id/add_classes"
+        app:layout_constraintStart_toStartOf="@+id/add_classes"
+        app:layout_constraintTop_toBottomOf="@+id/text_classes" />
 
     <ImageButton
         android:id="@+id/add_classes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="59dp"
         android:backgroundTint="@android:color/holo_green_light"
         android:src="@drawable/outline_dashboard_customize_black_24dp"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="479dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/add_classes_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:text="@string/add_classes_text"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="499dp" />
+        app:layout_constraintStart_toEndOf="@+id/add_classes"
+        app:layout_constraintTop_toTopOf="@+id/add_classes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
