--- a/myapplication/src/main/res/layout/fragment_classes.xml
+++ b/myapplication/src/main/res/layout/fragment_classes.xml
@@ -83,14 +83,18 @@
 
     <TextView
         android:id="@+id/my_classes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_width="103dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="180dp"
         android:layout_marginTop="83dp"
+        android:layout_marginEnd="178dp"
+        android:layout_marginBottom="63dp"
         android:text="@string/my_classes"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/class_1"
+        app:layout_constraintBottom_toTopOf="@+id/class_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
