--- a/learn/src/main/res/layout/fragment_discussion.xml
+++ b/learn/src/main/res/layout/fragment_discussion.xml
@@ -4,88 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "@color/purple_500"
+    android:background= "@color/white"
     tools:context=".Fragment_discussion">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
+        android:id="@+id/discussions_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="90dp"
         android:layout_marginHorizontal="26sp"
-        android:text="My Classes"
+        android:text="Discussions"
         android:textColor="@color/black"
         android:textSize="26sp"/>
 
-    <ImageButton
-        android:id="@+id/class_1"
+    <TextView
+        android:id="@+id/create_thread_text"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="120dp"
+        android:layout_marginTop="200dp"
+        android:gravity="center"
+        android:text="Create a new thread..."
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"/>
+
+    <ImageButton
+        android:id="@+id/create_thread"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="60dp"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:src="@drawable/ic_baseline_add_24"
+        app:tint="@android:color/black" />
+
+    <TextView
+        android:id="@+id/thread_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="120dp"
+        android:layout_marginTop="250dp"
+        android:gravity="center"
+        android:text="Would anyone like to study for the exam this weekend?"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"/>
+
+    <Button
+        android:id="@+id/reply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:text="Reply"
+        android:textColor="@color/black"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/account_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="70dp"
         app:tint="@android:color/black"
         android:backgroundTint="#F44336"
-        android:src="@drawable/ic_outline_school_24"/>
-
-    <ImageButton
-        android:id="@+id/class_2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#FFC107"
-        android:src="@drawable/ic_outline_school_24"/>
-
-
-    <ImageButton
-        android:id="@+id/class_3"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#8BC34A"
-        android:src="@drawable/ic_outline_school_24"/>
-
-    <ImageButton
-        android:id="@+id/class_4"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#009688"
-        android:src="@drawable/ic_outline_school_24"/>
-
-
-    <ImageButton
-        android:id="@+id/class_5"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#2196F3"
-        android:src="@drawable/ic_outline_school_24" />
-
-
-    <ImageButton
-        android:id="@+id/class_6"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="60dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#673AB7"
-        android:src="@drawable/ic_outline_school_24" />
-
+        android:src="@drawable/ic_baseline_account_circle_24"/>
 
 
     <TextView
@@ -96,52 +82,6 @@
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/class_4" />
-
-
-    <TextView
-        android:id="@+id/tip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="30dp"
-        android:text="A useful tip for the app will go here"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
-
-    <ImageView
-        android:id="@+id/lightbulb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="100dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="#F44336"
-        android:src="@drawable/ic_outline_lightbulb_24"/>
-
-    <ImageButton
-        android:id="@+id/add_classes_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="140dp"
-        android:layout_marginRight="100dp"
-        app:tint="@android:color/black"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:src="@drawable/ic_baseline_dashboard_customize_24" />
-
-    <TextView
-        android:id="@+id/add_classes_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="140dp"
-        android:layout_marginLeft="0dp"
-        android:text="Add more classes"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </FrameLayout>
