--- a/learn/src/main/res/layout/fragment_discussion.xml
+++ b/learn/src/main/res/layout/fragment_discussion.xml
@@ -9,6 +9,11 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ImageView
+        android:layout_width="420dp"
+        android:layout_height="150dp"
+        android:src="@drawable/rectangle" />
+
     <TextView
         android:id="@+id/discussions_text"
         android:layout_width="match_parent"
@@ -28,6 +33,7 @@
         android:layout_marginTop="200dp"
         android:gravity="center"
         android:text="Create a new thread..."
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"/>
 
@@ -48,6 +54,7 @@
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="250dp"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="Would anyone like to study for the exam this weekend?"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"/>
