--- a/learn/src/main/res/layout/fragment_login.xml
+++ b/learn/src/main/res/layout/fragment_login.xml
@@ -3,12 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "@color/teal_200"
+    android:background= "@color/white"
     tools:context=".Fragment_login">
 
 
 
     <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:layout_width="420dp"
+        android:layout_height="150dp"
+        android:src="@drawable/rectangle" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +23,6 @@
         android:text="Login"
         android:textColor="@color/black"
         android:textSize="26sp"/>
-
 
 
     <EditText
@@ -43,7 +47,7 @@
         android:id="@+id/signUpButton"
         android:text="New user? Sign Up!"
         android:layout_gravity="center_horizontal"
-        android:backgroundTint="@android:color/transparent"
+        android:backgroundTint="@android:color/holo_green_light"
         android:layout_marginTop="330dp"
         android:layout_marginHorizontal="26sp"/>
 
@@ -53,7 +57,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/loginButton"
         android:text="Login"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint="@android:color/holo_green_light"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="150dp"/>
+
 </FrameLayout>
