--- a/learn/src/main/res/layout/fragment_discussion.xml
+++ b/learn/src/main/res/layout/fragment_discussion.xml
@@ -27,6 +27,7 @@
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="200dp"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="Create a new thread..."
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"/>
@@ -48,6 +49,7 @@
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="250dp"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="Would anyone like to study for the exam this weekend?"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"/>
