--- a/learn/src/main/res/layout/fragment_login.xml
+++ b/learn/src/main/res/layout/fragment_login.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "@color/white"
+    android:background="@color/white"
     tools:context=".Fragment_login">
-
 
 
     <!-- TODO: Update blank fragment layout -->
@@ -17,48 +16,53 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="90dp"
         android:layout_marginHorizontal="26sp"
+        android:layout_marginTop="90dp"
+        android:gravity="center"
         android:text="Login"
         android:textColor="@color/black"
-        android:textSize="26sp"/>
+        android:textSize="26sp" />
 
 
     <EditText
         android:id="@+id/emailData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
         android:layout_marginHorizontal="26sp"
-        android:hint="Email" />
+        android:layout_marginTop="250dp"
+        android:backgroundTint="#000000"
+        android:hint="Email"
+        android:textColorHint="#2E2E2E" />
 
     <EditText
         android:id="@+id/passwordData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
         android:layout_marginHorizontal="26sp"
-        android:hint="Password" />
+        android:layout_marginTop="290dp"
+        android:backgroundTint="#000000"
+        android:hint="Password"
+        android:textColorHint="#2E2E2E"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/signUpButton"
-        android:text="New user? Sign Up!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:layout_marginHorizontal="26sp"
         android:layout_marginTop="330dp"
-        android:layout_marginHorizontal="26sp"/>
+        android:backgroundTint="@android:color/holo_green_light"
+        android:text="New user? Sign Up!"
+        android:textColor="#2E2E2E" />
 
 
     <Button
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
-        android:text="Login"
-        android:backgroundTint="@android:color/holo_green_light"
         android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="150dp"/>
+        android:layout_marginBottom="150dp"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:text="Login" />
 
 </FrameLayout>
