--- a/learn/src/main/res/layout/fragment_login.xml
+++ b/learn/src/main/res/layout/fragment_login.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="250dp"
         android:backgroundTint="#000000"
         android:hint="Email"
+        android:textColor="#66BB6A"
         android:textColorHint="#2E2E2E" />
 
     <EditText
@@ -42,6 +43,7 @@
         android:layout_marginTop="290dp"
         android:backgroundTint="#000000"
         android:hint="Password"
+        android:textColor="#66BB6A"
         android:textColorHint="#2E2E2E"/>
 
     <Button
