--- a/learn/src/main/res/layout/fragment_signup.xml
+++ b/learn/src/main/res/layout/fragment_signup.xml
@@ -33,6 +33,7 @@
         android:layout_marginHorizontal="26sp"
         android:backgroundTint="#000000"
         android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
         android:hint="First Name *" />
 
     <EditText
@@ -43,6 +44,7 @@
         android:layout_marginHorizontal="26sp"
         android:backgroundTint="#000000"
         android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
         android:hint="Last Name *" />
 
     <EditText
@@ -53,6 +55,7 @@
         android:layout_marginHorizontal="26sp"
         android:backgroundTint="#000000"
         android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
         android:hint="Phone Number (recommended)" />
 
     <EditText
@@ -63,6 +66,7 @@
         android:layout_marginHorizontal="26sp"
         android:backgroundTint="#000000"
         android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
         android:hint="Email *" />
 
     <EditText
@@ -73,6 +77,7 @@
         android:layout_marginHorizontal="26sp"
         android:backgroundTint="#000000"
         android:textColorHint="#2E2E2E"
+        android:textColor="#66BB6A"
         android:hint="Password *" />
 
     <Button
