--- a/learn/src/main/res/layout/fragment_home.xml
+++ b/learn/src/main/res/layout/fragment_home.xml
@@ -126,13 +126,13 @@
 
     <TextView
         android:id="@+id/tip"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="80dp"
+        android:text="Did you know? You can create new threads in the discussion page."
         android:textColor="@color/black"
-        android:text="A useful tip for the app will go here"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView" />
 
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="120dp"
         app:tint="@android:color/black"
         android:backgroundTint="#F44336"
         android:src="@drawable/ic_outline_lightbulb_24"/>
