--- a/learn/src/main/res/layout/fragment_discussion.xml
+++ b/learn/src/main/res/layout/fragment_discussion.xml
@@ -119,11 +119,11 @@
 
     <TextView
         android:id="@+id/thread_2"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="310dp"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:gravity="center"
         android:textColor="@color/black"
         android:text="Count me in, Caroline!"
